// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test component: documentView. Renders correctly '<DocumentView />' when policy content is loaded. 1`] = `
<section
  className="makeStyles-section-1"
>
  <WithStyles(ForwardRef(Container))
    className="makeStyles-container-2"
  >
    <Styled(MuiBox)
      py={12}
    >
      <div
        data-aos="fade-down"
      >
        <Link
          to="/"
        >
          <WithStyles(ForwardRef(IconButton))>
            <Memo(ForwardRef(ArrowBackIcon)) />
          </WithStyles(ForwardRef(IconButton))>
        </Link>
        <WithStyles(ForwardRef(Divider))
          className="makeStyles-divider-3"
        />
      </div>
      <div
        data-aos="fade-up"
      >
        <RenderContent
          items={
            Array [
              Object {
                "id": "5b30be71-0e68-4be4-bd29-7f40fe130414",
                "prop": "",
                "text": "",
                "type": "html",
                "value": "<p>Policy text</p>",
              },
            ]
          }
        />
      </div>
    </Styled(MuiBox)>
  </WithStyles(ForwardRef(Container))>
</section>
`;

exports[`Test component: documentView. Renders correctly '<DocumentView />' when story content is loaded. 1`] = `
<section
  className="makeStyles-section-1"
>
  <WithStyles(ForwardRef(Container))
    className="makeStyles-container-2"
  >
    <Styled(MuiBox)
      py={12}
    >
      <div
        data-aos="fade-down"
      >
        <Link
          to="/"
        >
          <WithStyles(ForwardRef(IconButton))>
            <Memo(ForwardRef(ArrowBackIcon)) />
          </WithStyles(ForwardRef(IconButton))>
        </Link>
        <WithStyles(ForwardRef(Divider))
          className="makeStyles-divider-3"
        />
      </div>
      <div
        data-aos="fade-up"
      >
        <RenderContent
          items={
            Array [
              Object {
                "id": "5b30be71-0e68-4be4-bd29-7f40fe130414",
                "prop": "",
                "text": "",
                "type": "html",
                "value": "<p>Story text</p>",
              },
            ]
          }
        />
      </div>
    </Styled(MuiBox)>
  </WithStyles(ForwardRef(Container))>
</section>
`;

exports[`Test component: documentView. Renders correctly '<DocumentView />' when terms content is loaded. 1`] = `
<section
  className="makeStyles-section-1"
>
  <WithStyles(ForwardRef(Container))
    className="makeStyles-container-2"
  >
    <Styled(MuiBox)
      py={12}
    >
      <div
        data-aos="fade-down"
      >
        <Link
          to="/"
        >
          <WithStyles(ForwardRef(IconButton))>
            <Memo(ForwardRef(ArrowBackIcon)) />
          </WithStyles(ForwardRef(IconButton))>
        </Link>
        <WithStyles(ForwardRef(Divider))
          className="makeStyles-divider-3"
        />
      </div>
      <div
        data-aos="fade-up"
      >
        <RenderContent
          items={
            Array [
              Object {
                "id": "5b30be71-0e68-4be4-bd29-7f40fe130414",
                "prop": "",
                "text": "",
                "type": "html",
                "value": "<p>Terms text</p>",
              },
            ]
          }
        />
      </div>
    </Styled(MuiBox)>
  </WithStyles(ForwardRef(Container))>
</section>
`;
